--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "axios": "^0.16.1",
     "base-64": "^0.1.0",
     "crypto-js": "3.1.9-1",
+    "es6-promise": "^4.1.0",
+    "fetch-everywhere": "^1.0.5",
+    "halogen": "^0.2.0",
+    "lodash": "^4.17.4",
     "moment": "2.17.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-webcam": "^0.0.14"
+    "react-loading": "0.0.9",
+    "react-webcam": "^0.0.14",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
